network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-services
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: db
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: bookstore
            role: search
      - podSelector:
          matchLabels:
            app: bookstore
            role: api
      - podSelector:
          matchLabels:
            app: inventory
            role: web
